feat: prepare A2A integration
We use a sealed integration interface in most of place with 2 implementations:
- one for API integration (historic)
- and a second for A2A integration

In DB we use only a single table/collection with flatten object and a
key to separate both.

Most of the work is in adapters to make the bridge between this 2
worlds.

## Notes

For JDBC we use a JSON string with the serialization of well known URLs
by simplicity.

APIM-9546